[package]
name = "claude-proxy-api-key"
version = "0.1.0"
edition = "2021"
description = "Anthropic-compatible failover reverse proxy for Claude Code with ring key rotation"
license = "MIT"

[[bin]]
name = "claude-proxy"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
anyhow = "1"
futures-util = "0.3"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
